[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/interact/InteractDialogueControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/utils/physics/interact/click/InteractClickboxMultiple.gd" type="Script" id=2]

[node name="InteractClickboxMultiple" type="Area2D"]
script = ExtResource( 2 )
json_path_arr = [ "res://ui/interact/test_dialogue.json" ]

[node name="ClickableArea" type="CollisionShape2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractDialogueControl" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 12.0
margin_right = -88.0
margin_bottom = 12.0

[connection signal="input_event" from="." to="." method="_on_InteractClickbox_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_InteractClickbox_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InteractClickbox_mouse_exited"]
[connection signal="dialogue_complete" from="CanvasLayer/InteractDialogueControl" to="." method="_on_InteractDialogueControl_dialogue_complete"]
